--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "gh-pages -d dist"
+    "deploy": "git add docs && git commit -m 'Deploy to GitHub Pages' && git push"
   },
   "dependencies": {
     "react": "^19.0.0",
